--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
     "dotenv": "^17.2.3",
-    "express": "^4.22.1"
+    "express": "^4.22.1",
+    "prisma": "^6.19.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
